--- a/graphqlTestServer/package.json
+++ b/graphqlTestServer/package.json
@@ -15,7 +15,8 @@
     "express-graphql": "^0.9.0",
     "faker": "^4.1.0",
     "graphql": "^14.4.2",
-    "pg": "^7.11.0"
+    "pg": "^7.11.0",
+    "pg-promise": "^8.7.5"
   },
   "devDependencies": {},
   "description": ""
