--- a/anagraphqlEditor/package.json
+++ b/anagraphqlEditor/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --open"
+    "dev": "NODE_ENV=development webpack-dev-server --open",
+    "build": "NODE_ENV=production webpack"
   },
   "keywords": [],
   "author": "",
