--- a/graphqlTestServer/package.json
+++ b/graphqlTestServer/package.json
@@ -15,6 +15,7 @@
     "express-graphql": "^0.9.0",
     "faker": "^4.1.0",
     "graphql": "^14.4.2",
+    "nodemon": "^1.19.1",
     "pg": "^7.11.0"
   },
   "devDependencies": {},
