--- a/anagraphqlEditor/package.json
+++ b/anagraphqlEditor/package.json
@@ -14,6 +14,8 @@
     "codemirror": "^5.48.2",
     "codemirror-graphql": "^0.8.3",
     "express": "^4.17.1",
+    "graphql": "^14.4.2",
+    "graphql-language-service-parser": "^1.2.2",
     "react": "^16.8.6",
     "react-codemirror": "^1.0.0",
     "react-dom": "^16.8.6",
