--- a/anagraphqlEditor/package.json
+++ b/anagraphqlEditor/package.json
@@ -20,6 +20,7 @@
     "react": "^16.8.6",
     "react-codemirror": "^1.0.0",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
