--- a/graphqlTestServer/package.json
+++ b/graphqlTestServer/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^17.1.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3"
