--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "monitoring"
   ],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/oslabs-beta/anagraphql/issues"
   },
