--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "anagraphql",
   "version": "1.0.0",
   "description": "Express middleware used to analyze graphQL queries before interacting with the database.",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
