--- a/package.json
+++ b/package.json
@@ -21,12 +21,5 @@
   "bugs": {
     "url": "https://github.com/oslabs-beta/anagraphql/issues"
   },
-  "homepage": "https://github.com/oslabs-beta/anagraphql#readme",
-  "dependencies": {
-    "@types/graphql": "^14.2.3",
-    "@types/node": "^12.6.8",
-    "express-graphql": "^0.9.0",
-    "graphql": "^14.4.2",
-    "nodemon": "^1.19.1"
-  }
+  "homepage": "https://github.com/oslabs-beta/anagraphql#readme"
 }
