--- a/anagraphqlEditor/package.json
+++ b/anagraphqlEditor/package.json
@@ -6,17 +6,21 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "NODE_ENV=development webpack-dev-server --open",
+    "start": "nodemon src/server/server.js",
     "build": "NODE_ENV=production webpack"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "anagraphql": "file:..",
     "codemirror": "^5.48.2",
     "codemirror-graphql": "^0.8.3",
     "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
     "graphql": "^14.4.2",
     "graphql-language-service-parser": "^1.2.2",
+    "pg-promise": "^9.0.0",
     "react": "^16.8.6",
     "react-codemirror2": "^6.0.0",
     "react-dom": "^16.8.6",
