added faker and config for dev env

--- a/anagraphqlEditor/package.json
+++ b/anagraphqlEditor/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "config": "sh src/server/config/config.sh",
     "dev": "NODE_ENV=development webpack-dev-server --open",
     "start": "nodemon src/server/server.js",
     "build": "NODE_ENV=production webpack"
@@ -18,6 +19,7 @@
     "codemirror-graphql": "^0.8.3",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
+    "faker": "^4.1.0",
     "graphql": "^14.4.2",
     "graphql-language-service-parser": "^1.2.2",
     "pg-promise": "^9.0.0",
