added react-markdown and syntax-highlighter

--- a/anagraphqlEditor/package.json
+++ b/anagraphqlEditor/package.json
@@ -21,8 +21,10 @@
     "react-animated-css": "^1.2.1",
     "react-codemirror2": "^6.0.0",
     "react-dom": "^16.8.6",
+    "react-markdown": "^4.1.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
+    "react-syntax-highlighter": "^11.0.2",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
