--- a/graphqlTestServer/package.json
+++ b/graphqlTestServer/package.json
@@ -25,7 +25,8 @@
     "eslint-config-airbnb": "^17.1.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.3"
+    "eslint-plugin-react": "^7.14.3",
+    "jest": "^24.8.0"
   },
   "description": ""
 }
