--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/oslabs-beta/anagraphql/issues"
   },
-  "homepage": "https://github.com/oslabs-beta/anagraphql#readme"
+  "homepage": "https://github.com/oslabs-beta/anagraphql#readme",
+  "devDependencies": {
+    "jest": "^24.8.0"
+  }
 }
