--- a/anagraphqlEditor/package.json
+++ b/anagraphqlEditor/package.json
@@ -21,6 +21,7 @@
     "react-animated-css": "^1.2.1",
     "react-codemirror2": "^6.0.0",
     "react-dom": "^16.8.6",
+    "react-markdown": "^4.1.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
