--- a/anagraphqlEditor/package.json
+++ b/anagraphqlEditor/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "dev": "NODE_ENV=development webpack-dev-server --open",
-    "build": "NODE_ENV=production webpack"
+    "build": "NODE_ENV=production webpack",
+    "start":"bash ./buildRun.sh"
   },
   "keywords": [],
   "author": "",
