--- a/graphqlTestServer/package.json
+++ b/graphqlTestServer/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.1",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "bash buildRun.sh",
     "config": "sh config/config.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
