--- a/graphqlTestServer/package.json
+++ b/graphqlTestServer/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "nodemon index.js",
     "config": "sh config/config.sh",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
